--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "demo",
-  "version": "1.3.33",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "MQTTClient": "0.0.1",
